src/Dependencies/libtase2-2.3.0/src/inc/tase2_client.h


typedef struct sTase2_ClientDSTransferSet* Tase2_ClientDSTransferSet;
typedef enum
{
    TASE2_CLIENT_STATE_IDLE,
    TASE2_CLIENT_STATE_CONNECTED,
    TASE2_CLIENT_STATE_CLOSED
} Tase2_ClientState;
typedef struct sTase2_ClientDataSet* Tase2_ClientDataSet;
typedef void
(*Tase2_DSTransferSetValueHandler) (void* parameter, Tase2_ClientDSTransferSet transferSet, const char* domainName, const char* pointName, Tase2_PointValue pointValue);
typedef void
(*Tase2_DSTransferSetReportHandler) (void* parameter, bool finished, uint32_t seq, Tase2_ClientDSTransferSet transferSet);
typedef void
(*Tase2_InformationMessageHandler) (void* parameter, int32_t infoRef, int32_t localRef, int32_t msgId, int32_t size, uint8_t* messageBuffer);
typedef void
(*Tase2_ConnectionClosedHandler) (void* parameter, Tase2_Client connection);
typedef void
(*Tase2_Client_StateChangedHandler) (void* parameter, Tase2_Client client, Tase2_ClientState newState);
TASE2_API Tase2_ClientDataSet
Tase2_Client_getDataSet(Tase2_Client self, Tase2_ClientError* err, const char* domainName, const char* dataSetName);
TASE2_API bool
Tase2_Client_createDataSet(Tase2_Client self, Tase2_ClientError* err,
        const char* domainName, const char* dataSetName,
        LinkedList dataSetElements);
TASE2_API bool
Tase2_Client_deleteDataSet(Tase2_Client self, Tase2_ClientError* err, const char* domainName, const char* dataSetName);
TASE2_API Tase2_ClientDSTransferSet
Tase2_Client_getNextDSTransferSet(Tase2_Client self, const char* domainName, Tase2_ClientError* err);
TASE2_API Tase2_Client
Tase2_Client_create(TLSConfiguration tlsConfig);
TASE2_API Tase2_Client
Tase2_Client_createEx(Tase2_Endpoint endpoint);
TASE2_API Tase2_Endpoint
Tase2_Client_getEndpoint(Tase2_Client self);
TASE2_API void
Tase2_Client_destroy(Tase2_Client self);
TASE2_API void
Tase2_Client_installDSTransferSetValueHandler(Tase2_Client self, Tase2_DSTransferSetValueHandler handler, void* parameter);
TASE2_API void
Tase2_Client_installDSTransferSetReportHandler(Tase2_Client self, Tase2_DSTransferSetReportHandler handler, void* parameter);
TASE2_API void
Tase2_Client_installConnectionClosedHandler(Tase2_Client self, Tase2_ConnectionClosedHandler handler, void* parameter);
TASE2_API void
Tase2_Client_installStateChangedHandler(Tase2_Client self, Tase2_Client_StateChangedHandler handler, void* parameter);
TASE2_API void
Tase2_Client_setTcpPort(Tase2_Client self, int tcpPort);
TASE2_API void
Tase2_Client_setRemoteApTitle(Tase2_Client self, const char* apTitle, int aeQualifier);
TASE2_API void
Tase2_Client_setRemoteAddresses(Tase2_Client self, Tase2_PSelector pSelector, Tase2_SSelector sSelector, Tase2_TSelector tSelector);
TASE2_API void
Tase2_Client_setLocalAddresses(Tase2_Client self, Tase2_PSelector pSelector, Tase2_SSelector sSelector, Tase2_TSelector tSelector);
TASE2_API Tase2_ClientError
Tase2_Client_connect(Tase2_Client self, const char* hostname, const char* apTitle, int aeQualifier);
TASE2_API void
Tase2_Client_disconnect(Tase2_Client self);
TASE2_API Tase2_ClientState
Tase2_Client_getState(Tase2_Client self);
TASE2_API char*
Tase2_Client_getBilateralTableId(Tase2_Client self, Tase2_ClientError* err, const char* domainName);
TASE2_API int
Tase2_Client_getServerVersionMajor(Tase2_Client self);
TASE2_API int
Tase2_Client_getServerVersionMinor(Tase2_Client self);
TASE2_API int
Tase2_Client_getSupportedFeatures(Tase2_Client self);
TASE2_API void
Tase2_Client_readPeerIdentity(Tase2_Client self, Tase2_ClientError* err, char** vendor, char** model, char** revision);
TASE2_API LinkedList 
Tase2_Client_getVCCVariables(Tase2_Client self, Tase2_ClientError* err);
TASE2_API LinkedList 
Tase2_Client_getVCCDataSets(Tase2_Client self, Tase2_ClientError* err);
TASE2_API LinkedList 
Tase2_Client_getDomainNames(Tase2_Client self, Tase2_ClientError* err);
TASE2_API LinkedList 
Tase2_Client_getDomainVariables(Tase2_Client self, const char* domainName, Tase2_ClientError* err);
TASE2_API LinkedList 
Tase2_Client_getDomainDataSets(Tase2_Client self, const char* domainName, Tase2_ClientError* err);
TASE2_API int
Tase2_Client_selectDevice(Tase2_Client self, Tase2_ClientError* err, const char* domainName, const char* deviceName);
TASE2_API bool
Tase2_Client_setTag(Tase2_Client self, Tase2_ClientError* err, const char* domainName, const char* deviceName, Tase2_TagValue tagValue, const char* reason);
TASE2_API Tase2_TagValue
Tase2_Client_getTag(Tase2_Client self, Tase2_ClientError* err, const char* domainName, const char* deviceName, bool* isArmed, char* reasonBuf, int reasonBufSize);
TASE2_API bool
Tase2_Client_sendCommand(Tase2_Client self, Tase2_ClientError* err, const char* domainName, const char* deviceName, int16_t commandValue);
TASE2_API bool
Tase2_Client_sendDiscreteSetPoint(Tase2_Client self, Tase2_ClientError* err, const char* domainName, const char* deviceName, int16_t setPointValue);
TASE2_API bool
Tase2_Client_sendRealSetPoint(Tase2_Client self, Tase2_ClientError* err, const char* domainName, const char* deviceName, float setPointValue);
TASE2_API Tase2_PointValue
Tase2_Client_readPointValue(Tase2_Client self, Tase2_ClientError* err, const char* domainName, const char* pointName);
TASE2_API LinkedList 
Tase2_Client_readMultiplePointValues(Tase2_Client self, Tase2_ClientError* err, const char* domainName, LinkedList pointNames);
TASE2_API void
Tase2_Client_IMTransferSetEnable(Tase2_Client self, Tase2_ClientError* err);
TASE2_API void
Tase2_Client_installIMTransferSetHandler(Tase2_Client self, Tase2_InformationMessageHandler handler, void* parameter);
TASE2_API void
Tase2_FreeMemory(void* ptr);