src/Dependencies/libtase2-2.3.0/jna/src/main/com/libtase2/client/Client.java

package com.libtase2.client;

/*
 *  Copyright 2018 MZ Automation GmbH
 *
 *  This file is part of libtase2
 */

import java.util.Collection;
import java.util.HashMap;
import java.util.LinkedList;
import java.util.List;
import java.util.Map;

import com.libtase2.common.Endpoint;
import com.libtase2.common.PointValue;
import com.libtase2.common.TLSConfiguration;
import com.libtase2.common.Tag;
import com.libtase2.common.TagValue;
import com.sun.jna.Callback;
import com.sun.jna.CallbackThreadInitializer;
import com.sun.jna.DefaultTypeMapper;
import com.sun.jna.FromNativeContext;
import com.sun.jna.Library;
import com.sun.jna.Memory;
import com.sun.jna.Native;
import com.sun.jna.Pointer;
import com.sun.jna.Structure;
import com.sun.jna.ToNativeContext;
import com.sun.jna.TypeConverter;
import com.sun.jna.ptr.PointerByReference;

public class Client {

    private interface NativeLibTase2 extends Library {
        NativeLibTase2 INSTANCE = (NativeLibTase2) Native.loadLibrary("tase2", NativeLibTase2.class, getOptions());

        public static class Tase2_TSelector extends Structure {

            public static class ByValue extends Tase2_TSelector implements Structure.ByValue {
            }

            public byte size;
            public byte[] value = new byte[16];

            @Override
            protected List<String> getFieldOrder() {
                List<String> fieldOrder = new LinkedList<String>();

                fieldOrder.add("size");
                fieldOrder.add("value");

                return fieldOrder;
            }

        }

        public static class Tase2_SSelector extends Structure {

            public static class ByValue extends Tase2_SSelector implements Structure.ByValue {
            }

            public byte size;
            public byte[] value = new byte[16];

            @Override
            protected List<String> getFieldOrder() {
                List<String> fieldOrder = new LinkedList<String>();

                fieldOrder.add("size");
                fieldOrder.add("value");

                return fieldOrder;
            }

        }

        public static class Tase2_PSelector extends Structure {

            public static class ByValue extends Tase2_PSelector implements Structure.ByValue {
            }

            public byte size;
            public byte[] value = new byte[16];

            @Override
            protected List<String> getFieldOrder() {
                List<String> fieldOrder = new LinkedList<String>();

                fieldOrder.add("size");
                fieldOrder.add("value");

                return fieldOrder;
            }

        }

        Pointer Tase2_Client_create(Pointer tlsConfiguration);

        Pointer Tase2_Client_createEx(Pointer endpoint);

        Pointer Tase2_Client_getEndpoint(Pointer self);

        int Tase2_Client_connect(Pointer self, String hostname, String apTitle, int aeQualifier);

        void Tase2_Client_disconnect(Pointer self);

        void Tase2_Client_destroy(Pointer self);

        int Tase2_Client_getState(Pointer self);

        int Tase2_Client_getServerVersionMajor(Pointer self);

        int Tase2_Client_getServerVersionMinor(Pointer self);

        int Tase2_Client_getSupportedFeatures(Pointer self);

        Pointer Tase2_Client_getVCCVariables(Pointer self, PointerByReference err);

        Pointer Tase2_Client_getVCCDataSets(Pointer self, PointerByReference err);

        Pointer Tase2_Client_getDomainNames(Pointer self, PointerByReference err);

        Pointer Tase2_Client_getDomainVariables(Pointer self, String domainName, PointerByReference err);

        Pointer Tase2_Client_getDomainDataSets(Pointer self, String domainName, PointerByReference err);

        int Tase2_Client_selectDevice(Pointer self, PointerByReference err, String domainName, String deviceName);

        byte Tase2_Client_setTag(Pointer self, PointerByReference err, String domainName, String deviceName,
                int tagValue, String reason);

        int Tase2_Client_getTag(Pointer self, PointerByReference err, String domainName, String deviceName,
                PointerByReference isArmed, Pointer reasonBuf, int reasonBufSize);

        byte Tase2_Client_sendCommand(Pointer self, PointerByReference err, String domainName, String deviceName,
                short commandValue);

        byte Tase2_Client_sendDiscreteSetPoint(Pointer self, PointerByReference err, String domainName,
                String deviceName, short setPointValue);

        byte Tase2_Client_sendRealSetPoint(Pointer self, PointerByReference err, String domainName, String deviceName,
                float setPointValue);

        Pointer Tase2_Client_readPointValue(Pointer self, PointerByReference err, String domainName, String pointName);

        Pointer Tase2_Client_readMultiplePointValues(Pointer self, PointerByReference err, String domainName,
                Pointer pointNames);

        Pointer Tase2_Client_getNextDSTransferSet(Pointer self, String domainName, PointerByReference err);

        interface Tase2_DSTransferSetValueHandler extends Callback {
            void callback(Pointer parameter, Pointer transferSet, String domainName, String pointName,
                    Pointer pointValue);
        }

        void Tase2_Client_installDSTransferSetValueHandler(Pointer self, Tase2_DSTransferSetValueHandler handler,
                Pointer parameter);

        interface Tase2_DSTransferSetReportHandler extends Callback {
            void invoke(Pointer parameter, byte finished, int seq, Pointer transferSet);
        }

        void Tase2_Client_installDSTransferSetReportHandler(Pointer self, Tase2_DSTransferSetReportHandler handler,
                Pointer parameter);

        interface Tase2_Client_StateChangedHandler extends Callback {
            void invoke(Pointer parameter, Pointer client, int newState);
        }

        void Tase2_Client_installStateChangedHandler(Pointer self, Tase2_Client_StateChangedHandler handler,
                Pointer parameter);

        interface Tase2_ConnectionClosedHandler extends Callback {
            void invoke(Pointer parameter, Pointer connection);
        }

        void Tase2_Client_installConnectionClosedHandler(Pointer self, Tase2_ConnectionClosedHandler handler,
                Pointer parameter);

        interface Tase2_InformationMessageHandler extends Callback {
            void invoke(Pointer parameter, int infoRef, int localRef, int msgId, int size, Pointer messageBuffer);
        }

        void Tase2_Client_installIMTransferSetHandler(Pointer self, Tase2_InformationMessageHandler handler,
                Pointer parameter);

        void Tase2_Client_IMTransferSetEnable(Pointer self, PointerByReference err);

        Pointer Tase2_Client_getDataSet(Pointer self, PointerByReference err, String domainName, String dataSetName);

        byte Tase2_Client_deleteDataSet(Pointer self, PointerByReference err, String domainName, String dataSetName);

        byte Tase2_Client_createDataSet(Pointer self, PointerByReference err, String domainName, String dataSetName,
                Pointer dataSetElements);

        Pointer LinkedList_create();

        void LinkedList_add(Pointer self, Pointer data);

        Pointer LinkedList_getNext(Pointer self);

        Pointer LinkedList_getData(Pointer self);

        void LinkedList_destroy(Pointer self);

        void LinkedList_destroyStatic(Pointer self);

        void Tase2_Client_setTcpPort(Pointer self, int tcpPort);

        void Tase2_Client_setRemoteApTitle(Pointer self, String apTitle, int aeQualifier);

        void Tase2_Client_setRemoteAddresses(Pointer self, Tase2_PSelector.ByValue pSelector,
                Tase2_SSelector.ByValue sSelector, Tase2_TSelector.ByValue tSelector);

        void Tase2_Client_setLocalAddresses(Pointer self, Tase2_PSelector.ByValue pSelector,
                Tase2_SSelector.ByValue sSelector, Tase2_TSelector.ByValue tSelector);

        void Tase2_Client_readPeerIdentity(Pointer self, PointerByReference err, PointerByReference vendor,
                PointerByReference model, PointerByReference revision);

        Pointer Tase2_Client_getBilateralTableId(Pointer self, PointerByReference err, String domainName);

        void Tase2_FreeMemory(Pointer ptr);
    }

    private static Map<String, ?> getOptions() {
        Map<String, Object> result = new HashMap<String, Object>();

        DefaultTypeMapper typeMapper = new DefaultTypeMapper();

        typeMapper.addTypeConverter(Boolean.class, new TypeConverter() {
            @Override
            public Object fromNative(Object nativeValue, FromNativeContext context) {
                return ((Byte) nativeValue) != 0;
            }

            @Override
            public Class<?> nativeType() {
                return byte.class;
            }

            @Override
            public Object toNative(Object value, ToNativeContext context) {
                if (value.getClass() == Boolean.class) {
                    value = (Boolean) value;
                }
                if ((Boolean) value) {
                    return (byte) 1;
                } else {
                    return 0;
                }
            }
        });

        result.put(Library.OPTION_TYPE_MAPPER, typeMapper);
        return result;
    }

    public Pointer self = Pointer.NULL;

    public Endpoint endpoint = null;

    TLSConfiguration tlsConfiguration = null;

    private List<ClientDSTransferSet> dsTransferSets = new LinkedList<ClientDSTransferSet>();

    private ConnectionClosedHandler connectionClosedHandler = null;
    private Object connectionClosedHandlerParameter = null;

    private StateChangedHandler stateChangedHandler = null;
    private Object stateChangedHandlerParameter = null;

    NativeLibTase2.Tase2_InformationMessageHandler infoMessHandlerNative = null;
    private InformationMessageHandler infoMessHandler = null;
    private Object infoMessHandlerParameter = null;

    private DSTransferSetHandler dstsHandler = null;
    private Object dstsHandlerParameter = null;
    NativeLibTase2.Tase2_DSTransferSetReportHandler dstsReportHandlerNative = null;
    NativeLibTase2.Tase2_DSTransferSetValueHandler dstsValueHandlerNative = null;
    NativeLibTase2.Tase2_Client_StateChangedHandler scHandler = null;

    private CallbackThreadInitializer cbThreadInitializer = new CallbackThreadInitializer();

    private ClientDSTransferSet lookupKnownDSTransferSet(Pointer ref) {
        ClientDSTransferSet clientDsts = null;

        synchronized (dsTransferSets) {
            for (ClientDSTransferSet dsts : dsTransferSets) {
                if (dsts.self.equals(ref))
                    clientDsts = dsts;
            }
        }

        return clientDsts;
    }

    private static long getUnsignedInt(int x) {
        return x & 0x00000000ffffffffL;
    }

    private void initializeClientInstance() {
        final Client _client = this;

        NativeLibTase2.Tase2_ConnectionClosedHandler fn = new NativeLibTase2.Tase2_ConnectionClosedHandler() {

            @Override
            public void invoke(Pointer parameter, Pointer connection) {
                if (connectionClosedHandler != null)
                    connectionClosedHandler.connectionClosed(connectionClosedHandlerParameter, _client);
            }
        };

        NativeLibTase2.INSTANCE.Tase2_Client_installConnectionClosedHandler(self, fn, Pointer.NULL);

        dstsReportHandlerNative = new NativeLibTase2.Tase2_DSTransferSetReportHandler() {

            @Override
            public void invoke(Pointer parameter, byte finished, int seq, Pointer transferSet) {
                if (dstsHandler != null) {
                    /* lookup known transfer set instance */
                    ClientDSTransferSet clientDsts = lookupKnownDSTransferSet(transferSet);

                    long longSeq = getUnsignedInt(seq);
